# cpp4ec

./: .gitignore  CMakeLists.txt  README.txt  cpp4ec.kdev4
doxygen/: Doxyfile  mainpage.dox
doxygen/examples/: demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp
src/: CMakeLists.txt  EcError.cpp  EcError.h  EcErrorSGDV.cpp  EcErrorSGDV.h  EcMaster.cpp  EcMaster.h  EcNRTMaster.cpp  EcRTMaster.cpp  EcSlave.cpp  EcSlave.h  EcSlaveFactory.cpp  EcSlaveFactory.h  EcSlaveSGDV.cpp  EcSlaveSGDV.h  EcSlaveTrack.cpp  EcSlaveTrack.h  EcUtil.cpp  EcUtil.h  configure_CARRIL.xml  configure_SGDV_1.xml  configure_SGDV_2.xml  configure_SGDV_3.xml  realtimetask.cpp  realtimetask.h  servos_rt.h  soem_SGDV.cpp  soem_SGDV.hpp  soem_driver_factory.cpp  soem_driver_factory.h  soem_master.cpp  soem_master.hpp  soem_slave.cpp  soem_slave.hpp  soem_slave_config.hpp
src/EcNRTThread/: CMakeLists.txt  EcNRTThread.cpp  EcNRTThread.h
src/EcRTThread/: CMakeLists.txt  EcRTThread.c  EcRTThread.h
src/errors/: SGDV_error.hpp  master_error.cpp  master_error.hpp
src_rt/: CMakeLists.txt  EcError.h  EcErrorSGDV.cpp  EcErrorSGDV.h  EcFRTMaster.cpp  EcMaster.h  EcRTMaster.h  EcSlave.cpp  EcSlave.h  EcSlaveFactory.cpp  EcSlaveFactory.h  EcSlaveSGDV.cpp  EcSlaveSGDV.h  EcSlaveTrack.h  EcUtil.h
src_rt/EcRTThread/: CMakeLists.txt  EcFRTThread.c
tests/: CMakeLists.txt  demo.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demoCarril.cpp  demoCarrilPosition.cpp  demoCarrilVelocity.cpp
